k8s/nginx-apps-ing.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-apps
spec:
    selector:
        app: nginx-apps
        tier: frontend
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-apps
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    tls:
        - hosts:
              - test-apps.symper.vn
          secretName: symper-tls
    rules:
        - host: test-apps.symper.vn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-apps
                            port:
                                number: 80
